--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-opencv-python==4.5.5.64
-streamlit==1.7.0
-streamlit-webrtc==0.35.2
-tensorflow==2.8.0
+streamlit==1.4.0
+tensorflow-cpu==2.6.3
+opencv-python-headless
+streamlit-webrtc
