--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-streamlit==1.7.0
-streamlit-webrtc==0.35.2
+
 tensorflow-cpu==2.2.0
 opencv-contrib-python-headless>=4.5.1.48
+keras==2.7.0
+streamlit==1.2.0
+numpy==1.20.3
+streamlit-webrtc==0.31.2
