--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 
 tensorflow-cpu==2.6.3
-streamlit==0.81.0
-tensorflow-cpu
+streamlit
 opencv-python-headless==4.5.1.48
-streamlit-webrtc==0.11.0
+streamlit-webrtc
