--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-tensorflow-cpu==2.6.2
-keras==2.7.0
-streamlit==1.2.0
+numpy==1.20.1
+opencv-python-headless>=4.5.1.48
 tensorflow-cpu
-numpy==1.20.3
-streamlit-webrtc==0.31.2
-opencv-contrib-python-headless>=4.5.1.48
+streamlit-webrtc==0.33.0
+streamlit==1.2.0
