--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-numpy==1.20.1
-opencv-python-headless>=4.5.1.48
-tensorflow-cpu
-streamlit-webrtc==0.33.0
-streamlit==1.2.0
+
+opencv-python-headless
+tensorflow-cpu==2.6.3
+streamlit-webrtc
+streamlit
