--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-numpy==1.19
-opencv-python-headless
-tensorflow-cpu==2.6.2
-streamlit-webrtc
-streamlit
+numpy~=1.21.2
+streamlit~=0.87.0
+keras~=2.4.3
+opencv-contrib-python-headless
+tensorflow-cpu
+streamlit_webrtc
