--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-python==3.7.11
-numpy==1.19
-opencv-python-headless
-tensorflow-cpu==2.6.2
-streamlit-webrtc
-streamlit
+tensorflow-cpu==2.8.0
+numpy==1.19.5
+opencv-python-headless==4.5.5.62
+streamlit==1.0.0
+streamlit-webrtc==0.33
